oauth2-proxy-react-envoy-docker/envoy.yaml
static_resources:

  listeners:
  - name: listeners_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filtersd.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: "*"
              routes:
              - match:
                  prefix: "/frontend"
                route:
                  cluster: frontend_cluster
              - match:
                  prefix: "/auth"
                route:
                  cluster: keycloak_cluster
              - match:
                  prefix: "/oauth2"
                route:
                  cluster: oauth2proxy_cluster
  clusters:
  - name: frontend_cluster
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: frontend_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frontend
                port_value: 3000
  - name: keycloak_cluster
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: keycloak_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: keycloak
                port_value: 8080
  - name: oauth2proxy_cluster
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: oauth2proxy_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: 
                address: oauth2proxy
                port_value: 8041
